...
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name" translatable="false">Ltt.rs</string>
    <string name="archive">Archive</string>
    <string name="mark_unread">Mark as unread</string>
    <string name="mark_read">Mark as read</string>
    <string name="delete">Delete</string>
    <string name="mark_important">Mark as important</string>
    <string name="add_flag">Add flag</string>
    <string name="remove_flag">Remove flag</string>
...
    <plurals name="n_deleted">
        <item quantity="one">%d deleted</item>
        <item quantity="other">%d deleted</item>
    </plurals>
    <string name="deleted">Deleted</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">E-mail address</string>
    <string name="username_optional">Username (optional, defaults to email)</string>
    <string name="sign_in_instruction">with your e-mail account.</string>
    <string name="next">Next</string>
    <string name="enter_an_email_address">Type in an e-mail address</string>
    <string name="enter_a_valid_email_address">Type a valid e-mail address</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_password">Type in your password</string>
    <string name="enter_the_bearer_token">Type in the Bearer Token</string>
    <string name="enter_a_password">Type in a password</string>
    <string name="enter_a_bearer_token">Type in a Bearer Token</string>
    <string name="wrong_password">Wrong password. Try again.</string>
    <string name="wrong_bearer_token">Wrong Bearer Token. Try again.</string>
    <string name="found_no_supported_authentication_methods">Found no supported authentication methods</string>
    <string name="information_required">Info required</string>
    <string name="enter_your_connection_url">Type in your connection URL</string>
    <string name="enter_a_valid_url">Type in a valid connection URL</string>
    <string name="enter_a_secure_url">Type in a secure URL</string>
    <string name="endpoint_not_found">No e-mail service at this address</string>
    <string name="invalid_session_resource">There is no valid e-mail service at this address</string>
    <string name="unable_to_connect">Could not connect to e-mail service</string>
    <string name="timeout_reached">Trying to connect to e-mail service timed out</string>
    <string name="unable_to_establish_secure_connection">Could not establish a secure connection</string>
    <string name="unable_to_verify_service_identity">Could not verify identity</string>
    <string name="unknown_host">Could not resolve %s</string>
    <string name="no_network_connection">Connect to the Internet</string>
    <string name="unable_to_fetch_session">Could not fetch session: %s</string>
    <string name="compose">Compose</string>
    <string name="attach_file">Attach file</string>
    <string name="send">Send</string>
    <string name="discard">Discard</string>
    <string name="schedule_send">Schedule sending</string>
    <string name="compose_to">To</string>
    <string name="compose_compose_email">Compose e-mail</string>
...
    <string name="could_not_store_account_credentials">Could not store account credentials</string>
    <string name="reassign_role">Reassign role</string>
    <string name="assign_role">Assign role</string>
    <string name="reassign_role_question">You already have a label called %1$s with the role of %2$s. Would you like to reassign it the role of %3$s?</string>
    <string name="assign_role_question">You already have a label called %1$s. Would you like to assign it the role of %2$s?</string>
    <string name="assign_role_detailed_explanation">Ltt.rs needs a label (mailbox) with the role of %1$s to work correctly. If you don’t want to use the label called %2$s for that purpose you can tap cancel and use your desktop or web client to create a different label with the role of %1$s.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="change_labels">Change labels</string>
    <string name="label_as">Label as</string>
    <string name="apply_changes">Apply changes</string>
    <string name="enter_a_label_name">Type in a new label name</string>
    <string name="no_name_specified">No name specified. Try again.</string>
...
    <string name="new_label">New label</string>
    <string name="create">Create</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="add_another_account">Add another account</string>
    <string name="foreground_service_notification_text">Ltt.rs keeps running to notify about incoming e-mail</string>
    <string name="foreground_service">Foreground service</string>
    <string name="role_name_inbox">Inbox</string>
    <string name="role_name_sent">Sent</string>
    <string name="role_name_all">All e-mail</string>
    <string name="role_name_archive">Archive</string>
    <string name="role_name_drafts">Drafts</string>
    <string name="role_name_flagged">Starred</string>
    <string name="role_name_important">Important</string>
...
