...
            app:nullable="false" />
        <argument
            android:name="label"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="subject"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="important"
            app:argType="boolean"
            app:nullable="false" />
...
