<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Daniel Gultsch
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="@{setupViewModel.isLoading() ? View.VISIBLE : View.INVISIBLE}" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:minHeight="336dp"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp">

                <ImageButton
                    android:id="@+id/request_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="4dp"
                    android:contentDescription="@string/show_helper_dialog"
                    android:src="@drawable/ic_help_24dp"
                    android:visibility="@{setupViewModel.isLoading() ? View.GONE : View.VISIBLE}" />

                <LinearLayout
                    android:id="@+id/instruction_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:layout_below="@+id/header"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="24sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16sp"
                        android:layout_height="16sp"
                        android:layout_marginTop="1sp"
                        android:layout_marginEnd="2sp"
                        android:src="@drawable/ic_account_circle_24dp"
                        app:tint="?android:attr/textColorPrimary"/>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{setupViewModel.emailAddress}"
                        tools:text="username@exmample.com" />
                </LinearLayout>

                <TextView
                    android:id="@+id/header"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/app_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24sp"
                    android:text="@string/information_required" />

                <TextView
                    android:id="@+id/app_name"
                    style="@style/AppNameTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32sp"
                    android:text="@string/app_name" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:enabled="@{!setupViewModel.isLoading()}"
                    android:onClick="@{(v) -> setupViewModel.enterSessionResource()}"
                    android:text="@string/next" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/url_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/instruction_wrapper"
                    android:layout_gravity="center_horizontal"
                    android:enabled="@{!setupViewModel.isLoading()}"
                    android:hint="@string/enter_your_connection_url"
                    app:errorText="@{setupViewModel.sessionResourceError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:text="@={setupViewModel.sessionResource}"
                        app:editorAction="@{()->setupViewModel.enterSessionResource()}" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <data>

        <import type="android.view.View" />

        <variable
            name="setupViewModel"
            type="rs.ltt.android.ui.model.SetupViewModel" />
    </data>
</layout>